# binsync

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  binsync_plugin.py  install.sh  pyproject.toml  setup.cfg  setup.py  zion.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: core-tests.yml  ghidra-build.yml  gui-tests.yml  python-app.yml  python-package-gui.yml  python-publish.yml  release.yml
angr-plugin/: LICENSE  setup.cfg
angr-plugin/binsync_plugin_angrmanagement/: __init__.py  controller.py
angr-plugin/binsync_plugin_angrmanagement/install/: __init__.py  install.py
angr-plugin/binsync_plugin_angrmanagement/install/binsync/: hook.py  plugin.toml
binsync/: __init__.py  __main__.py  binsync_plugin.py  client.py  configuration.py  controller.py  errors.py  installer.py  loggercfg.py  merge.py  server.py  state.py  utils.py
binsync/api/: __init__.py  artifact_lifter.py  controller.py  type_parser.py  utils.py
binsync/common/: __init__.py  artifact_lifter.py  controller.py
binsync/common/ui/: __init__.py  config_dialog.py  control_panel.py  magic_sync_dialog.py  manual_merge.py  qt_objects.py  ui_worker_thread.py  utils.py  version.py
binsync/common_ui/: __init__.py  config_dialog.py  control_panel.py
binsync/common_ui/tables/: __init__.py  functions_table.py
binsync/core/: __init__.py  auth_helper.py  cache.py  client.py  git_actions_util.py  git_backend.py  git_server.py  scheduler.py  state.py  threads.py  user.py
binsync/data/: __init__.py  artifact.py  base.py  comment.py  configuration.py  db.py  enum.py  func.py  global_variable.py  patch.py  stack_variable.py  state.py  struct.py  type_parser.py  user.py
binsync/data/db_model/: __init__.py  base_session.py  binary_user.py  dbcomment.py  function.py  sqacomment.py  sqafunction.py  sqametadata.py  variables.py
binsync/decompiler_stubs/: ghidra_binsync.py  ida_binsync.py
binsync/decompiler_stubs/angr_binsync/: __init__.py
binsync/decompiler_stubs/binja_binsync/: __init__.py  plugin.json  requirements.txt
binsync/decompiler_stubs/ghidra_binsync/: ghidra_binsync.py  ghidra_binsync_shutdown.py
binsync/decompilers/: __init__.py  angr.py  ghidra.py  ida.py
binsync/decompilers/angr/: __init__.py  artifact_lifter.py  control_panel_view.py  controller.py  plugin.py
binsync/decompilers/binja/: __init__.py  artifact_lifter.py  binja_binsync.py  compat.py  controller.py  requirements.txt
binsync/decompilers/ghidra/: README.md  __init__.py  artifact_lifter.py  control_panel_window.py  controller.py  ghidra_api.py
binsync/decompilers/ida/: artifact_lifter.py  compat.py  controller.py  hooks.py  plugin.py
binsync/extras/: __init__.py  ai.py
binsync/extras/ai/: __init__.py  ai_bs_user.py  ai_user_config.py  ai_user_config_ui.py  avar_bs_user.py  openai_bs_user.py  varmodel_bs_user.py
binsync/extras/aux_server/: __init__.py  aux_client.py  aux_server.py  store.py
binsync/extras/server/: __init__.py  server.py  store.py
binsync/interface_overrides/: angr.py  binja.py  ghidra.py  ida.py
binsync/interface_overrides/binja/: binja_binsync.py  compat.py
binsync/plugins/: base_plugin.py  enabled_plugins.toml  plugin_registry.py
binsync/stub_files/: README.md  __init__.py  ida-plugin.json  plugin.json  plugin.toml  requirements.txt
binsync/stub_files/angr_files/: __init__.py  plugin.toml
binsync/ui/: async_sync_dialog.py  config_dialog.py  control_panel.py  function_merge_dialog.py  magic_sync_dialog.py  progress_window.py  pull_segments_dialog.py  qt_objects.py  simple_control_panel.py  simple_history_panel.py  simple_utils_panel.py  utils.py  version.py
binsync/ui/aux_server_panel/: aux_server_window.py  connected_window.py  disconnected_window.py
binsync/ui/force_push/: __init__.py  force_push.py
binsync/ui/history_display/: history_window.py
binsync/ui/panel_tabs/: activity_table.py  ctx_table.py  functions_table.py  globals_table.py  table_model.py  types_table.py  util_panel.py
binsync/ui/progress_graph/: circular_view.py  progress_window.py  summarize.py
cli/: pyproject.toml  setup.cfg
cli/binsync_cli/: __init__.py  main.py
core/: .gitignore  setup.cfg  vendorize.toml
core/.github/ISSUE_TEMPLATE/: question.yml
core/binsync/: __init__.py  __main__.py  installer.py
core/binsync/core/: client.py  (+1 more)
core/plugin/: __init__.py  db.py  install.py
core/tests/: test_state.py
decompiler_stubs/: ghidra_binsync.py  ida_binsync.py
decompiler_stubs/angr_binsync/: __init__.py
decompiler_stubs/binja_binsync/: README.md  __init__.py  plugin.json  requirements.txt
plugins/angr_binsync/: artifact_lifter.py  binsync_plugin.py  control_panel_view.py  controller.py  plugin.toml
plugins/binja_binsync/: __init__.py  artifact_lifter.py  binja_binsync.py  compat.py  config_dialog.py  control_panel.py  controller.py  plugin.json  status_table.py  team_table.py  ui.py  ui_tools.py
plugins/ghidra_binsync/: BinSync.py  README.md  artifact_lifter.py  binsync_server.py  binsync_ui.py  control_panel_window.py  controller.py  ghidraScripts.java  ghidra_binsync.py  ghidra_client.py
plugins/ida_binsync/: ida_binsync.py
scripts/: install.sh  launch_and_update_ida.sh  setup_repo_for_binsync.sh
tests/: addrs_vars_fauxware.json  common.py  decompile_angr.py  disabled_test_angr_ui.py  test_angr_binsync.py  test_angr_gui.py  test_angr_ui.py  test_async_sync.py  test_auth_system.py  test_auxiliary_server.py  test_basic_functionality.py  test_branch_structure.py  test_checkout_conflicts.py  test_checkout_optimization.py  test_client.py  test_conflict_stashing.py  test_corruption_detection.py  test_git_backend.py  test_large_state.py  test_multi_user_sync.py  test_new_gui.py  test_new_user_branch_fix.py  test_refresh_users.py  test_remote_users.py  test_server.py  test_specific_error.py  test_state.py  test_sync_crash_fix.py  testing_guide.md
tests/ci/: setup_core_ci.sh  setup_gui_ci.sh
tests/json/: beanstalk_cpp.json  fauxware.json
tests/toml/: beanstalk_cpp.toml  fauxware.toml  objdump_ubuntu18_stripped.toml
(+100 files in other folders)
