[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "binsync"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
license = {text = "BSD 2 Clause"}
description = "A Collaboration framework for binary analysis tasks."
urls = {Homepage = "https://github.com/angr/binsync"}
requires-python = ">= 3.8"
dependencies = [
    "sortedcontainers",
    "toml",
    "GitPython",
    "filelock",
    "pycparser",
    "prompt_toolkit",
    "tqdm",
    "libbs>=1.10.0"
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = [
    "pytest-qt",
    "flake8",
    "pytest",
]
ghidra = [
    "ghidra_bridge",
    "PySide6-Essentials>=6.4.2,!=6.7.0",
]
extras = ["dailalib"]

[project.scripts]
binsync = "binsync.__main__:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "binsync.__version__"}
