[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "binsync"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
license = {text = "BSD 2 Clause"}
description = "A Collaboration framework for binary analysis tasks."
urls = {Homepage = "https://github.com/binsync/binsync"}
requires-python = ">= 3.10"
dependencies = [
    "libbs[ghidra]>=3.3.3",
    "sortedcontainers",
    "toml",
    "GitPython",
    "filelock",
    "pycparser",
    "ply",
    "prompt_toolkit",
    "tqdm",
    "wordfreq",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = [
    "pytest-qt",
    "flake8",
    "pytest",
]
extras = [
    "dailalib",
    "flask",
    "requests"
]

[project.scripts]
binsync = "binsync.__main__:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "binsync.__version__"}
