[metadata]
name = binsync
version = attr: binsync.__version__
url = https://github.com/angr/binsync
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = A Collaboration framework for binary analysis tasks.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
   sortedcontainers
   toml
   GitPython
   filelock
   pycparser
   setuptools
   prompt_toolkit
   tqdm

python_requires = >= 3.6
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    binsync = binsync.__main__:main

[options.extras_require]
test =
    angr-management
    pytest-qt
    PySide6-Essentials>=6.4.2
    flake8
    pytest

ghidra =
    ghidra_bridge
    PySide6-Essentials>=6.4.2

extras =
    dailalib
