[metadata]
name = binsync_plugin_angrmanagement
version = attr: binsync_plugin_angrmanagement.__version__
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE

[options]
install_requires =
   binsync
python_requires = >= 3.6
packages = find:

[options.package_data]
binsync_plugin_angrmanagement.install =
	binsync/*

# [options.packages.find]
# where = src
