[metadata]
name = binsync_cli
version = attr: binsync_cli.__version__
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE

[options]
install_requires =
	virtualenv
    pip
python_requires = >= 3.6
packages = find:

[options.entry_points]
console_scripts =
	binsync = binsync_cli:cli
